--- a/coffeans/index.html
+++ b/coffeans/index.html
@@ -16,6 +16,7 @@
     <li><a href="location.html">House Location</a></li>
     <li><a href="#Shop"> Shop</a></li>
     <li><a href="#gallery"> Gallery</a></li>
+    <li><a href="formulir/login.html">Login Member</a></li>
 </ul>
 
 <div id="menu">
